# irsimPy

./: .gitignore
claudeCodeConversations/: 20260623_ClaudeConversation.txt  20260717_ClaudeConversation.txt
controllers/: Makefile.am  pythonbatterycontroller.cpp  pythonbatterycontroller.h  pythonbluelightcontroller.cpp  pythonbluelightcontroller.h  pythoncompasscontroller.cpp  pythoncompasscontroller.h  pythoncontactcontroller.cpp  pythoncontactcontroller.h  pythoncontrollerbase.cpp  pythoncontrollerbase.h  pythonencodercontroller.cpp  pythonencodercontroller.h  pythongroundcontroller.cpp  pythongroundcontroller.h  pythoniri1controller.cpp  pythoniri1controller.h  pythonlightcontroller.cpp  pythonlightcontroller.h  pythonproxcontroller.cpp  pythonproxcontroller.h  pythonredlightcontroller.cpp  pythonredlightcontroller.h  pythonswitchlightcontroller.cpp  pythonswitchlightcontroller.h  pythonwheelscontroller.cpp  pythonwheelscontroller.h  testcompasscontroller.cpp
experiments/: ctrnnexp.cpp  iri1exp.cpp  iri1exp.h  testbatteryexp.cpp  testbluelightexp.cpp  testcompassexp.cpp  testcontactexp.cpp  testencoderexp.cpp  testgroundexp.cpp  testlightexp.cpp  testneuronexp.cpp  testneuronexp.h  testproxexp.cpp  testredlightexp.cpp  testswitchlightexp.cpp  testwheelsexp.cpp
fitnessfunctions/: garbagefitnessfunction.cpp
outputFiles/: robotPosition
paramFiles/braitenbergExamples/: braitenbergParam.txt
python/: __init__.py  battery_controller.py  bluelight_controller.py  compass_controller.py  contact_controller.py  encoder_controller.py  ground_controller.py  iri1_controller.py  light_controller.py  prox_controller.py  redlight_controller.py  simulator.py  switchlight_controller.py  wheels_controller.py
(+11 files in other folders)
