AM_CPPFLAGS = -I.. -I../actuators -I../sensors -I../arenas -I../collisions -I../objects


lib_LIBRARIES = libcontrollers.a
libcontrollers_a_SOURCES = 	pythoncontrollerbase.cpp \
								pythonwheelscontroller.cpp \
								pythoncontactcontroller.cpp \
								pythonproxcontroller.cpp \
								pythonlightcontroller.cpp \
								pythonbluelightcontroller.cpp \
								pythonredlightcontroller.cpp \
								pythonswitchlightcontroller.cpp \
								pythongroundcontroller.cpp \
								pythonbatterycontroller.cpp \
								pythonencodercontroller.cpp \
								pythoncompasscontroller.cpp \
								pythoniri1controller.cpp \
								testwheelscontroller.cpp \
														testlightcontroller.cpp \
														testswitchlightcontroller.cpp \
														testbluelightcontroller.cpp \
														testproxcontroller.cpp \
														testcontactcontroller.cpp \
														braitenbergvehicle2controller.cpp \
														perceptroncontroller.cpp \
														nncontroller.cpp \
														iri1controller.cpp \
														iri2controller.cpp \
														iri3controller.cpp \
														testgroundcontroller.cpp \
														testbatterycontroller.cpp \
														layercontroller.cpp \
														nndistributedcontroller.cpp \
														subsumptiongarbagecontroller.cpp \
														subsumptionlightcontroller.cpp \
														testcomcontroller.cpp \
														testredlightcontroller.cpp \
														testencodercontroller.cpp \
														testcompasscontroller.cpp \
														ctrnnlayercontroller.cpp \
														ctrnndistributedcontroller.cpp 
